Added form submit to simplex

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "rimraf": "^2.6.2"
   },
   "dependencies": {
+    "abort-controller": "^1.0.2",
     "edge-libplugin": "https://github.com/teneighty/edge-libplugin.git",
     "material-ui": "^1.0.0-beta.39",
-    "rc-form": "^2.1.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
