--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "material-ui": "^1.0.0-beta.39",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
