--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "babel-jest": "^20.0.3",
-    "edge-libplugin": "https://github.com/Airbitz/edge-libplugin.git#4c094a6",
+    "edge-libplugin": "https://github.com/EdgeApp/edge-libplugin.git",
     "eslint": "^4.12.1",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-flowtype": "^2.35.0",
