--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Wyre",
   "subtitle": "Buy crypto with US bank accounts\nBTC, ETH, and DAI\nFees 1%. 1-3 day settlement",
   "provider": "Edge Wallet",
-  "iconUrl": "http://edge.app/wp-content/uploads/2019/01/wyre-logo-square-small.png",
+  "iconUrl": "https://edge.app/wp-content/uploads/2019/01/wyre-logo-square-small.png",
   "environment": {
   }
 }
