--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "pluginId": "co.edgesecure.wyre",
   "name": "Wyre",
-  "subtitle": "Buy crypto with US bank accounts\nBTC, ETH, and DAI\nFees 1%. 3-5 day settlement",
+  "subtitle": "Buy crypto with US bank accounts\nBTC, ETH, DAI\nFees 1% / Settlement 2-5 days",
   "provider": "Edge Wallet",
   "iconUrl": "https://edge.app/wp-content/uploads/2019/01/wyre-logo-square-small.png",
   "environment": {
