--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,13 @@
 {
-  "extends": ["standard", "plugin:flowtype/recommended", "plugin:react/recommended"],
+  "extends": ["standard", "plugin:flowtype/recommended", "plugin:react/recommended", "standard"],
   "parser": "babel-eslint",
-  "plugins": ["flowtype", "standard"],
+  "plugins": ["flowtype", "standard", "react"],
   "rules": {
-    "camelcase": "error",
+    "camelcase": "warn",
     "flowtype/generic-spacing": "off",
     "no-throw-literal": "error",
     "no-var": "error",
-    "prefer-const": "error"
+    "prefer-const": "error",
+    "prefer-promise-reject-errors": "warn"
   }
 }
