--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "babel-eslint": "^8.1.0",
     "babel-jest": "^20.0.3",
+    "babel-helper-define-map":"6.26.0",
     "edge-libplugin": "https://github.com/EdgeApp/edge-libplugin.git#9048d04",
     "eslint": "^4.17.1",
     "eslint-plugin-flowtype": "^2.35.0",
@@ -14,6 +15,7 @@
     "eslint-plugin-react": "^7.3.0",
     "eslint-plugin-standard": "^3.0.1",
     "flow-bin": "^0.65.0",
+    "history": "^4.9.0",
     "husky": "^1.3.1",
     "import-sort-cli": "^5.0.0",
     "js-sha256":"^0.9.0",
@@ -25,7 +27,10 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "1.1.1",
     "rimraf": "^2.6.2",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "react-redux": "^5.0.5",
+    "redux":"^4.0.4",
+    "redux-thunk":"^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
