--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,6 @@
   "provider": "Edge Wallet",
   "iconUrl": "https://edge.app/wp-content/uploads/2019/01/wyre-logo-square-small.png",
   "environment": {
-  }
+  },
+  "supportEmail": "support@sendwyre.com"
 }
