update screens and dependencies

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-eslint": "^8.1.0",
     "babel-jest": "^20.0.3",
     "babel-helper-define-map":"6.26.0",
+    "edge-plugin-screens-and-components" : "https://github.com/EdgeApp/edge-plugin-screens-and-components",
     "edge-libplugin": "https://github.com/EdgeApp/edge-libplugin.git#9048d04",
     "eslint": "^4.17.1",
     "eslint-plugin-flowtype": "^2.35.0",
@@ -20,10 +21,11 @@
     "import-sort-cli": "^5.0.0",
     "js-sha256":"^0.9.0",
     "lint-staged": "^6.1.1",
-    "material-ui": "1.0.0-beta.39",
+    "@material-ui/core":"^4.3.2",
+    "@material-ui/icons":"4.2.1",
     "prettier-eslint-cli": "^4.7.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react":"^16.9.0",
+    "react-dom":"^16.9.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "1.1.1",
     "rimraf": "^2.6.2",
