--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,6 @@
   "iconUrl": "https://edge.app/wp-content/uploads/2019/01/wyre-logo-square-small.png",
   "environment": {
   },
-  "supportEmail": "support@sendwyre.com"
+  "supportEmail": "support@sendwyre.com",
+  "permissions": ["camera"]
 }
