--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.2",
   "private": true,
   "devDependencies": {
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "4.2.1",
     "babel-eslint": "^8.1.0",
+    "babel-helper-define-map": "6.26.0",
     "babel-jest": "^20.0.3",
-    "babel-helper-define-map":"6.26.0",
-    "edge-plugin-screens-and-components" : "https://github.com/EdgeApp/edge-plugin-screens-and-components",
     "edge-libplugin": "https://github.com/EdgeApp/edge-libplugin.git#9048d04",
+    "edge-plugin-screens-and-components": "https://github.com/EdgeApp/edge-plugin-screens-and-components",
     "eslint": "^4.17.1",
     "eslint-plugin-flowtype": "^2.35.0",
     "eslint-plugin-import": "^2.7.0",
@@ -19,20 +21,18 @@
     "history": "^4.9.0",
     "husky": "^1.3.1",
     "import-sort-cli": "^5.0.0",
-    "js-sha256":"^0.9.0",
+    "js-sha256": "^0.9.0",
     "lint-staged": "^6.1.1",
-    "@material-ui/core":"^4.3.2",
-    "@material-ui/icons":"4.2.1",
     "prettier-eslint-cli": "^4.7.0",
-    "react":"^16.9.0",
-    "react-dom":"^16.9.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^5.0.0",
     "react-scripts": "1.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.2",
-    "uuid": "^3.2.1",
-    "react-redux": "^5.0.5",
-    "redux":"^4.0.4",
-    "redux-thunk":"^2.3.0"
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -66,6 +66,7 @@
     "manifest.json"
   ],
   "dependencies": {
+    "cleaners": "^0.2.0",
     "js-sha256": "^0.9.0",
     "moment": "^2.22.2"
   }
