--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-eslint": "^8.1.0",
     "babel-helper-define-map": "6.26.0",
     "babel-jest": "^20.0.3",
+    "edge-libplugin": "https://github.com/EdgeApp/edge-libplugin",
     "edge-plugin-screens-and-components": "https://github.com/EdgeApp/edge-plugin-screens-and-components",
     "eslint": "^4.17.1",
     "eslint-plugin-flowtype": "^2.35.0",
