--- a/.flowconfig
+++ b/.flowconfig
@@ -3,6 +3,9 @@
 .*/node_modules/react-native/.*
 .*/node_modules/react-native-keyboard-aware-scroll-view/.*
 .*/node_modules/jss/.*
+.*/node_modules/eslint-plugin-*
+.*/node_modules/eslint-import-*
+
 [include]
 
 [libs]
