--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "babel-jest": "^20.0.3",
     "edge-libplugin": "https://github.com/EdgeApp/edge-libplugin",
     "edge-plugin-screens-and-components": "https://github.com/EdgeApp/edge-plugin-screens-and-components",
-    "eslint": "^4.17.1",
-    "eslint-plugin-flowtype": "^2.35.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.3.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "flow-bin": "^0.65.0",
+    "eslint": "^7.14.0",
+    "eslint-config-standard-kit": "0.15.1",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-native": "^3.8.1",
+    "eslint-plugin-simple-import-sort": "^6.0.1",
+    "flow-bin": "^0.84.0",
     "history": "^4.9.0",
-    "husky": "^1.3.1",
+    "husky": "^7.0.0",
     "import-sort-cli": "^5.0.0",
     "js-sha256": "^0.9.0",
-    "lint-staged": "^6.1.1",
-    "prettier-eslint-cli": "^4.7.0",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^5.0.5",
@@ -41,11 +45,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "edge": "edge-ify -o target -s build",
-    "lint": "eslint --parser babel-eslint ./src",
+    "lint": "eslint ./src",
     "lint:fix": "npm run lint -- --fix",
     "flow:0": "flow; exit 0",
     "flow": "flow",
-    "precommit": "flow"
+    "precommit": "npm run lint && flow",
+    "prepare": "npm run build && npm run edge"
   },
   "lint-staged": {
     "ignore": [
